# transient

./: Cargo.toml  README.md
src/: lib.rs  main.rs  rtf.rs  translator.rs  utils.rs
src/rtf/: control_word.rs  font_definition.rs  footnote.rs  logger.rs  processor.rs  rtf_cell.rs  sunderer.rs  symbol.rs  template.rs  utils.rs  worker.rs
src/rtf/processor/: misc.rs  unicode.rs
src/rtf/template/: generator.rs  stuffer.rs
src/translator/: llm.rs  translator.rs
src/utils/: lang.rs
