[package]
name = "transient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
